--- a/index.html
+++ b/index.html
@@ -7,11 +7,28 @@
     <title>Task 4 homework </title>
 <!--External Documents-->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+
 <!--Internal Documents-->
 <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
+    <nav>
+        <div class="logo"><h3>Logo Here</h3></div>
+        <div class="nav-con">
+            <ul>
+                <a href="index.html"><li class="active">Page One</li></a>
+                <a href="#"><li>Page Two</li></a>
+                <a href="#"><li>Page Three</li></a>
+                <a href="#"><li>Page Four</li></a>
+            </ul>
+        </div>
+    </nav>
     
+
+
+
 </body>
 </html>
