--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
             </ul>
         </div>
     </nav>
+
+    <header>
+        <h3><i>Its A Strange World Out There...</i></h3>
+        <h1>STRANGER THINGS: <br>SEASON 17</h1>
+        <p>Just when you thought we couldn't milk this franchise any longer, we are back to beat that dead horse!<br> Follow our Middle Aged Pre-teens as they work low income jobs, pay taxes and wash dishes..<strong> IN THE UPSIDE DOWN!</strong></p>
+       <div class="gry-btn">Watch Here on Netpics!</div>
+
+     </header>
+
+        <div container-fluid>
+            <div class="row">
+                <div class="intro col-12">
+                    <h2>Sign Up for Netpics for a Free Pack of Eggos!</h2>
+                </div>
+            </div>
+        </div>
     
 
 
